# arrayfire

./: .clang_complete  .coveralls.yml  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  ArrayFireConfig.cmake.in  ArrayFireConfigVersion.cmake.in  CITATION.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYRIGHT.md  CPack.cmake  CPack.txt  CTestConfig.cmake  FindArrayFire.cmake  INSTALL.md  LICENSE  LICENSE.rtf  Makefile  README.md  async_queue.hpp  conanfile.py  download_copy_cmakelists.stamp  test.cpp  util_allocator.cuh  vcpkg.json
benchmarks/: CMakeLists.txt  benchmark_macros.h
benchmarks/arith/: pi.cpp
benchmarks/linalg/: blas.cpp  cg.cpp
benchmarks/signal/: fft.cpp
docs/: CMakeLists.txt  arrayfire.css  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  doxygen.mk  footer.htm  header.htm  highlight.pack.js  highlight_js_doxygen.css  layout.xml  tabs.css
docs/details/: algorithm.dox  arith.dox  array.dox  backend.dox  blas.dox  data.dox  device.dox  examples.dox  features.dox  graphics.dox  image.dox  index.dox  internal.dox  lapack.dox  random.dox  signal.dox  sparse.dox  statistics.dox  util.dox  vision.dox
docs/pages/: INSTALL.md  README.md  arrayfire_pro_tips.md  configuring_arrayfire_environment.md  debugging.md  forge_visualization.md  getting_started.md  gfor.md  indexing.md  install.md  interop_cuda.md  interop_opencl.md  jit.md  matrix_manipulation.md  release_notes.md  timing.md  tutorials.md  unified_backend.md  using_on_linux.md  using_on_osx.md  using_on_windows.md  using_with_linux.md  using_with_ms_windows.md  vectorization.md
examples/: .clang-format  CMakeLists.txt  README.md  conway.cpp  conway_pretty.cpp  helloworld.cpp  pi.cpp
examples/CMakeModules/: BuildOptions.cmake  FindOpenCL.cmake
examples/benchmarks/: CMakeLists.txt  blas.cpp  cg.cpp  fft.cpp  pi.cpp
examples/codespace/: example.cpp
examples/common/: idxio.h  progress.h
examples/computer_vision/: CMakeLists.txt  fast.cpp  harris.cpp  matching.cpp  susan.cpp
examples/data/mnist/: labels-subset
examples/financial/: CMakeLists.txt  black_scholes_options.cpp  heston_model.cpp  input.h  monte_carlo_options.cpp
examples/getting_started/: CMakeLists.txt  convolve.cpp  integer.cpp  rainfall.cpp  vectorize.cpp
examples/graphics/: CMakeLists.txt  conway.cpp  conway_pretty.cpp  edge.cpp  field.cpp  fractal.cpp  gravity_sim.cpp  gravity_sim_init.h  histogram.cpp  histogram1d.cpp  interp.cpp  morphing.cpp  plot2d.cpp  plot3.cpp  surface.cpp
examples/hapi/: basic.cpp
examples/helloworld/: CMakeLists.txt  helloworld.cpp
examples/image_processing/: CMakeLists.txt  adaptive_thresholding.cpp  binary_thresholding.cpp  brain_segmentation.cpp  confidence_connected_components.cpp  deconvolution.cpp  edge.cpp  filters.cpp  gradient_diffusion.cpp  image_demo.cpp  image_editing.cpp  image_segmentation.cpp  morphing.cpp  optical_flow.cpp  pyramids.cpp
examples/images/: README.md
examples/lin_algebra/: CMakeLists.txt  cholesky.cpp  gmres.cpp  lu.cpp  qr.cpp  svd.cpp
examples/machine_learning/: CMakeLists.txt  bagging.cpp  deep_belief_net.cpp  diabetes.read.rdata.out.txt  geneticalgorithm.cpp  kmeans.cpp  knn.cpp  linear_regression.cpp  logistic_regression.cpp  logit.cpp  mnist_common.h  naive_bayes.cpp  neural_network.cpp  perceptron.cpp  rbm.cpp  softmax_regression.cpp
examples/memory_manager/: ArrayFireDefaultMemoryManager.cpp  ArrayFireDefaultMemoryManager.hpp  CMakeLists.txt  memory_manager.cpp
examples/pde/: CMakeLists.txt  bhrt.cpp  boltzmann_cfd.cpp  smothered_hydrodynamics.cpp  swe.cpp
examples/unified/: CMakeLists.txt  basic.cpp
hapi_examples/: CMakeLists.txt  test.cpp
src/api/c/: CMakeLists.txt  DependencyModule.cpp  DependencyModule.hpp  anisotropic_diffusion.cpp  approx.cpp  array.cpp  assign.cpp  bilateral.cpp  binary.cpp  blas.cpp  buffer_info.cpp  canny.cpp  cast.cpp  cholesky.cpp  clamp.cpp  colorspace.cpp  complex.cpp  confidence_connected.cpp  convolve.cpp  convolve_common.hpp  corrcoef.cpp  covariance.cpp  data.cpp  deconvolution.cpp  det.cpp  device.cpp  diff.cpp  dim4.cpp  dispatch.cpp  dispatch.hpp  dog.cpp  err_common.cpp  err_common.hpp  error.cpp  events.cpp  events.hpp  exampleFunction.cpp  fast.cpp  feature.cpp  features.cpp  (+104 more)
src/api/cpp/: CMakeLists.txt  anisotropic_diffusion.cpp  approx.cpp  array.cpp  bilateral.cpp  binary.cpp  blas.cpp  buffer_info.cpp  canny.cpp  clamp.cpp  colorspace.cpp  common.hpp  complex.cpp  confidence_connected.cpp  constants.cpp  convolve.cpp  corrcoef.cpp  covariance.cpp  data.cpp  deconvolution.cpp  device.cpp  diff.cpp  dog.cpp  error.hpp  event.cpp  exampleFunction.cpp  exception.cpp  fast.cpp  features.cpp  fft.cpp  fftconvolve.cpp  filters.cpp  gaussian_kernel.cpp  gfor.cpp  gradient.cpp  graphics.cpp  hamming.cpp  harris.cpp  histogram.cpp  homography.cpp  (+50 more)
src/api/hapi/: CMakeLists.txt  algorithm.cpp  arith.cpp  data.cpp  device.cpp  graphics.cpp  index.cpp  print.cpp  seq.cpp  signal.cpp  symbol_manager.cpp  symbol_manager.hpp
src/api/unified/: CMakeLists.txt  algorithm.cpp  arith.cpp  array.cpp  blas.cpp  cuda.cpp  data.cpp  device.cpp  error.cpp  event.cpp  features.cpp  graphics.cpp  image.cpp  index.cpp  internal.cpp  jit_test_api.cpp  lapack.cpp  memory.cpp  ml.cpp  moments.cpp  opencl.cpp  random.cpp  random_engine.cpp  signal.cpp  sparse.cpp  statistics.cpp  (+4 more)
test/: .clang-format  CMakeLists.txt  anisotropic_diffusion.cpp  approx1.cpp  approx2.cpp  array.cpp  array_death_tests.cpp  arrayfire_test.cpp  arrayio.cpp  assign.cpp  backend.cpp  basic.cpp  basic_c.c  bilateral.cpp  binary.cpp  binary_ops.hpp  blas.cpp  canny.cpp  cast.cpp  cholesky.cpp  cholesky_dense.cpp  clamp.cpp  compare.cpp  complex.cpp  confidence_connected.cpp  constant.cpp  convolve.cpp  corrcoef.cpp  covariance.cpp  cuda.cu  diagonal.cpp  diff1.cpp  diff2.cpp  dog.cpp  dot.cpp  empty.cpp  event.cpp  fast.cpp  fft.cpp  fft_large.cpp  (+122 more)
test/CMakeModules/: FindOpenCL.cmake  build_gtest.cmake  download_sparse_datasets.cmake
test/data/: README.md
test/mmio/: CMakeLists.txt  mmio.c  mmio.h
(+2626 files in other folders)
